--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -76,7 +76,8 @@ jobs:
         env:
           # # XXX rewrite for playwright
           # PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
-          PLAYWRIGHT_BROWSERS_PATH: /usr/bin
+          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+          # PLAYWRIGHT_BROWSERS_PATH: /usr/bin
         run: |
           yarn test:testing
           yarn test:headless
