--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -35,6 +35,8 @@ jobs:
 
       - name: Install all yarn packages
         if: steps.cached-node_modules.outputs.cache-hit != 'true'
+        env:
+          DEBUG: pw:install
         # env:
         #   # # XXX rewrite for playwright
         #   # PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
@@ -42,6 +44,10 @@ jobs:
         #   # PLAYWRIGHT_BROWSERS_PATH: $HOME/pw-browsers
         run: |
           yarn --frozen-lockfile
+
+      - name: Debug node_modules
+        run: |
+          du -sh node_modules/@playwright
 
       - name: Lint prettier
         run: yarn prettier-check
@@ -77,7 +83,7 @@ jobs:
           # # XXX rewrite for playwright
           # PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-          # PLAYWRIGHT_BROWSERS_PATH: /usr/bin
+          PLAYWRIGHT_BROWSERS_PATH: /usr/bin/chromium
         run: |
           yarn test:testing
           yarn test:headless
