--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-node@v2.3.0
         with:
           node-version: "12"
+          cache: "yarn"
 
       - name: Cache node_modules
         uses: actions/cache@v2.1.6
@@ -35,8 +36,6 @@ jobs:
 
       - name: Install all yarn packages
         if: steps.cached-node_modules.outputs.cache-hit != 'true'
-        env:
-          DEBUG: pw:install
         # env:
         #   # # XXX rewrite for playwright
         #   # PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
@@ -82,10 +81,11 @@ jobs:
         env:
           # # XXX rewrite for playwright
           # PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
-          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-          PLAYWRIGHT_BROWSERS_PATH: /usr/bin/chromium
+          # PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+          PLAYWRIGHT_BROWSERS_PATH: /usr/bin
         run: |
           yarn test:testing
-          yarn test:headless
 
-          # ./testing/scripts/functional-test.sh --runInBand
+          time playwright install chromium
+
+          yarn test:headless
