--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -36,11 +36,6 @@ jobs:
 
       - name: Install all yarn packages
         if: steps.cached-node_modules.outputs.cache-hit != 'true'
-        # env:
-        #   # # XXX rewrite for playwright
-        #   # PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
-        #   PLAYWRIGHT_BROWSERS_PATH: /usr/bin
-        #   # PLAYWRIGHT_BROWSERS_PATH: $HOME/pw-browsers
         run: |
           yarn --frozen-lockfile
 
@@ -85,6 +80,4 @@ jobs:
           PLAYWRIGHT_BROWSERS_PATH: /usr/bin
         run: |
           yarn test:testing
-
-          time node_modules/.bin/playwright install chromium
-          yarn test:headless
+          yarn test:headless --browser=google-chrome
