correct browser name

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -73,11 +73,11 @@ jobs:
           cat /tmp/stderr.log
 
       - name: Functional testing
-        env:
-          # # XXX rewrite for playwright
-          # PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
-          # PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-          # PLAYWRIGHT_BROWSERS_PATH: /usr/bin
+        # env:
+        # # XXX rewrite for playwright
+        # PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
+        # PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+        # PLAYWRIGHT_BROWSERS_PATH: /usr/bin
         run: |
           yarn test:testing
           yarn test:headless --browser=chromium
