--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -63,15 +63,6 @@ jobs:
           sleep 1
           curl --retry-connrefused --retry 5 http://localhost:5000 > /dev/null
 
-      - name: Debug server's stdout and stderr if tests failed
-        if: failure()
-        run: |
-          echo "STDOUT..................................................."
-          cat /tmp/stdout.log
-          echo ""
-          echo "STDERR..................................................."
-          cat /tmp/stderr.log
-
       - name: Functional testing
         # env:
         # # XXX rewrite for playwright
@@ -80,4 +71,13 @@ jobs:
         # PLAYWRIGHT_BROWSERS_PATH: /usr/bin
         run: |
           yarn test:testing
-          yarn test:headless --browser=chromium
+          yarn test:headless
+
+      - name: Debug server's stdout and stderr if tests failed
+        if: failure()
+        run: |
+          echo "STDOUT..................................................."
+          cat /tmp/stdout.log
+          echo ""
+          echo "STDERR..................................................."
+          cat /tmp/stderr.log
