Switching to playwright (#4341)
* switching to playwright

* wip

* wip

* wip

* lots of work ahead

* wip

* rename

* auth wip

* wip

* progress

* use --rootDir

* change rootdir

* wip

* wip

* install-deps

* try this

* kumascript tests

* ignore accordingly

* wip

* wip

* CONTENT_ROOT

* CONTENT_ROOT

* debugging

* debugging

* debugging

* try this

* debugging

* debugging

* debugging

* debugging

* correct browser name

* correct browser name

* config file

* hopefully make tests a bit more reliable

* tidying up some more

* tidying up more

* simplifying more

* hopefully a bit better

* start on the search page

* yarn lock update

* rewrite README about testing

* networkidle

--- a/.github/workflows/developing.yml
+++ b/.github/workflows/developing.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/setup-node@v2.3.2
         with:
           node-version: "12"
+          cache: "yarn"
 
       - name: Cache node_modules
         uses: actions/cache@v2.1.6
@@ -26,14 +27,11 @@ jobs:
         with:
           path: |
             node_modules
-          key: ${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+          key: ${{ runner.os }}-${{ hashFiles('yarn.lock') }}-${{ hashFiles('.github/workflows/developing.yml') }}
 
       - name: Install all yarn packages
         if: steps.cached-node_modules.outputs.cache-hit != 'true'
-        env:
-          PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
-        run: |
-          yarn --frozen-lockfile
+        run: yarn --frozen-lockfile
 
       - name: Setup kernel for react native, increase watchers
         run: |
@@ -72,11 +70,9 @@ jobs:
           # This will make sure the tests in `testing/tests/*.test.js` only run
           # if the development server is up and ready to be tested.
           TESTING_DEVELOPING: true
-          # Use local chrome installs since we skip downloading it as part
-          # of the yarn installs above
-          PUPPETEER_EXECUTABLE_PATH: /usr/bin/google-chrome
+          CONTENT_ROOT: mdn/content/files
         run: |
-          yarn test:testing developing
+          yarn test:developing
 
       - name: Debug server's stdout and stderr if tests failed
         if: failure()
