--- a/package.json
+++ b/package.json
@@ -25,11 +25,19 @@
     "test": "yarn prettier-check && yarn test:client && yarn test:kumascript && yarn test:content && yarn test:testing",
     "test:client": "cd client && tsc --noEmit && react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:content": "jest content",
+    "test:headless": "playwright test headless",
+    "test:developing": "playwright test developing",
     "test:kumascript": "jest kumascript",
-    "test:testing": "cd testing && jest",
+    "test:testing": "jest --rootDir testing",
     "tool": "node tool/cli.js",
     "watch:ssr": "cd ssr && webpack --mode=production --watch",
     "prepare": "husky install"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "headless*",
+      "developing.spec.js"
+    ]
   },
   "resolutions": {
     "@typescript-eslint/typescript-estree": ">=4.15.2",
@@ -108,6 +116,7 @@
     "@babel/core": "^7.15.0",
     "@mdn/dinocons": "^0.3.4",
     "@mdn/minimalist": "^2.0.2",
+    "@playwright/test": "1.13.0",
     "@storybook/addon-a11y": "^6.3.4",
     "@storybook/addon-essentials": "^6.3.4",
     "@storybook/preset-create-react-app": "^3.2.0",
@@ -140,14 +149,12 @@
     "ignore-loader": "^0.1.2",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "jest-junit-reporter": "^1.1.0",
-    "jest-puppeteer": "5.0.4",
     "jsdom": "^16.7.0",
     "node-dev": "7.0.0",
     "pegjs": "^0.10.0",
     "prettier": "2.3.2",
     "prettier-plugin-packagejson": "^2.2.11",
     "pretty-quick": "3.1.1",
-    "puppeteer": "9.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "^17.0.2",
