--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "MDN Web Docs",
   "scripts": {
     "build": "cross-env NODE_ENV=production node build/cli.js",
-    "build:client": "cd client && cross-env INLINE_RUNTIME_CHUNK=false react-scripts build",
+    "build:client": "cd client && cross-env INLINE_RUNTIME_CHUNK=false craco build",
     "build:ssr": "cd ssr && webpack --mode=production",
     "dev": "yarn prepare-build && nf -j Procfile.dev start",
     "eslint": "eslint .",
@@ -18,12 +18,12 @@
     "prettier-check": "prettier --check .",
     "prettier-format": "prettier --write .",
     "start": "(test -f client/build/index.html || yarn build:client) && (test -f ssr/dist/main.js || yarn build:ssr) && (test -d client/build/en-us/_spas || yarn tool spas) && nf -j Procfile.start start",
-    "start:client": "cd client && cross-env BROWSER=none PORT=3000 react-scripts start",
+    "start:client": "cd client && cross-env BROWSER=none PORT=3000 craco start",
     "start:dev-server": "node-dev server",
     "start:server": "node server",
     "start:static-server": "cross-env ENV_FILE=testing/.env node server/static.js",
     "test": "yarn prettier-check && yarn test:client && yarn test:kumascript && yarn test:content && yarn test:testing",
-    "test:client": "cd client && tsc --noEmit && react-scripts test --env=jest-environment-jsdom-sixteen",
+    "test:client": "cd client && tsc --noEmit && craco test --env=jest-environment-jsdom-sixteen",
     "test:content": "jest content",
     "test:kumascript": "jest kumascript",
     "test:testing": "cd testing && jest",
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@caporal/core": "2.0.2",
+    "@craco/craco": "^6.2.0",
     "@fast-csv/parse": "4.3.6",
     "@mdn/browser-compat-data": "3.3.13",
     "accept-language-parser": "1.5.0",
@@ -122,6 +123,7 @@
     "babel-loader": "8.1.0",
     "benchmark": "2.1.4",
     "braces": "^3.0.2",
+    "craco-linaria": "^1.1.2",
     "cross-env": "^7.0.3",
     "diff": "^5.0.0",
     "downshift": "^6.1.5",
@@ -142,6 +144,7 @@
     "jest-junit-reporter": "^1.1.0",
     "jest-puppeteer": "5.0.4",
     "jsdom": "^16.7.0",
+    "linaria": "^2.1.0",
     "node-dev": "7.0.0",
     "pegjs": "^0.10.0",
     "prettier": "2.3.2",
