--- a/package.json
+++ b/package.json
@@ -141,8 +141,7 @@
     "extend": "^3.0.2",
     "flexsearch": "0.6.32",
     "foreman": "3.0.1",
-    "fuzzyjs": "4.0.4",
-    "fuzzysearch": "1.0.3",
+    "fzf": "0.3.2",
     "history": "5.0.0",
     "html-validate": "5.2.1",
     "husky": "^6.0.0",
