--- a/.github/workflows/pr-kumascript.yml
+++ b/.github/workflows/pr-kumascript.yml
@@ -25,7 +25,10 @@ jobs:
 
       - uses: actions/checkout@v2.3.4
         with:
-          repository: mdn/content
+          # TEMPORARY
+          repository: peterbe/content
+          ref: migrate-kumascript-jsondata-to-content-repo
+          # repository: mdn/content
           path: mdn/content
 
       - name: Setup Node.js environment
