--- a/.github/workflows/pr-kumascript.yml
+++ b/.github/workflows/pr-kumascript.yml
@@ -23,14 +23,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
-      - uses: actions/checkout@v2.3.4
-        with:
-          # TEMPORARY
-          repository: peterbe/content
-          ref: migrate-kumascript-jsondata-to-content-repo
-          # repository: mdn/content
-          path: mdn/content
-
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.4.0
         with:
@@ -51,8 +43,6 @@ jobs:
 
       - name: Unit testing kumascript
         env:
-          CONTENT_ROOT: mdn/content/files
+          CONTENT_ROOT: testing/content/files
         run: |
-          echo $CONTENT_ROOT
-          ls -l $CONTENT_ROOT
           yarn test:kumascript
