--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "dependencies": {
     "@caporal/core": "2.0.2",
     "@fast-csv/parse": "4.3.6",
-    "@mdn/browser-compat-data": "lucacasonato/browser-compat-data#deno",
+    "@mdn/browser-compat-data": "mdn/browser-compat-data#main",
     "accept-language-parser": "1.5.0",
     "browser-specs": "^2.7.0",
     "chalk": "4.1.2",
