--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -51,6 +51,9 @@ jobs:
           yarn prepare-build
           yarn build
 
+          cat client/build/en-us/plus/bookmarks/index.html
+          cat client/build/en-us/plus/bookmarks/index.html | grep 'page-content-container plus' | grep div
+
           yarn start:static-server > /tmp/stdout.log 2> /tmp/stderr.log &
           sleep 1
           curl --retry-connrefused --retry 5 http://localhost:5000 > /dev/null
