REACT_APP_ENABLE_PLUS

--- a/testing/.env
+++ b/testing/.env
@@ -31,3 +31,6 @@ BUILD_SPEEDCURVE_LUX_ID=012345
 # The functional tests are done in a production'y way as if it had
 # to go into full production mode.
 BUILD_ALWAYS_ALLOW_ROBOTS=true
+
+# Always true for testing
+REACT_APP_ENABLE_PLUS=true
