--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -48,6 +48,15 @@ jobs:
         env:
           ENV_FILE: testing/.env
         run: |
+
+          # because `yarn prepare-build` is a wrapper for `yarn build:client` and
+          # `yarn build:client` can't respect the `$ENV_FILE` environment variable,
+          # because it has to build from the `./client/` directory, we have to
+          # manually copy the `testing/.env` file into `client/` so that when
+          # `yarn build:client` runs, it gets the same environment variables
+          # as you'd get when doing `yarn build:ssr`.
+          cp testing/.env client/
+
           yarn prepare-build
           yarn build
 
