headless tests for bookmarks (#4503)
* headless tests for bookmarks

* test a bit more

* make selector tests more reliable

* fix spas

* wait a bit longer

* testing the spa raw html too

* debugigng

* debugigng

* debugging

* debugging

* better wait

* debugging outPath

* debugging

* test plus page too

* no slash prefix

* REACT_APP_ENABLE_PLUS

* fix tests

* tidying up

* restoring

* networkidle

* try again

* desperate

* desperate

* debugging again

* fix debugging

* more debugging

* debugging

* solve problem

* cleaning up

* more cleaning

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -48,12 +48,21 @@ jobs:
         env:
           ENV_FILE: testing/.env
         run: |
+
+          # because `yarn prepare-build` is a wrapper for `yarn build:client` and
+          # `yarn build:client` can't respect the `$ENV_FILE` environment variable,
+          # because it has to build from the `./client/` directory, we have to
+          # manually copy the `testing/.env` file into `client/` so that when
+          # `yarn build:client` runs, it gets the same environment variables
+          # as you'd get when doing `yarn build:ssr`.
+          cp testing/.env client/
+
           yarn prepare-build
           yarn build
 
           yarn start:static-server > /tmp/stdout.log 2> /tmp/stderr.log &
           sleep 1
-          curl --retry-connrefused --retry 5 http://localhost:5000 > /dev/null
+          curl --fail --retry-connrefused --retry 5 http://localhost:5000 > /dev/null
 
       - name: Functional testing
         run: |
