upgrade to jsdom 17

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test:content": "jest content",
     "test:headless": "playwright test headless",
     "test:developing": "playwright test developing",
-    "test:kumascript": "jest kumascript",
+    "test:kumascript": "jest kumascript --env=node",
     "test:testing": "jest --rootDir testing",
     "tool": "node tool/cli.js",
     "watch:ssr": "cd ssr && webpack --mode=production --watch",
@@ -148,7 +148,7 @@
     "ignore-loader": "^0.1.2",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "jest-junit-reporter": "^1.1.0",
-    "jsdom": "^16.7.0",
+    "jsdom": "^17.0.0",
     "node-dev": "7.0.0",
     "pegjs": "^0.10.0",
     "prettier": "2.3.2",
