--- a/libs/slug-utils/package.json
+++ b/libs/slug-utils/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "license": "MPL-2.0",
-  "main": "index.js",
+  "type": "module",
+  "exports": "./index.js",
   "dependencies": {
     "sanitize-filename": "^1.6.3"
   }
