'yarn dev' and 'yarn build' now works

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prettier-format": "prettier --write .",
     "start": "(test -f client/build/index.html || yarn build:client) && (test -f ssr/dist/main.js || yarn build:ssr) && (test -d client/build/en-us/_spas || yarn tool spas) && nf -j Procfile.start start",
     "start:client": "cd client && cross-env BROWSER=none PORT=3000 react-scripts start",
-    "start:dev-server": "node-dev server",
+    "start:dev-server": "nodemon server --watch server --watch build --watch content --watch kumascript --ext js --watch ssr/dist",
     "start:server": "node server",
     "start:static-server": "cross-env ENV_FILE=testing/.env node server/static.js",
     "test": "yarn prettier-check && yarn test:client && yarn test:kumascript && yarn test:content && yarn test:testing",
@@ -117,6 +117,7 @@
     "@babel/core": "^7.15.0",
     "@mdn/dinocons": "^0.3.5",
     "@mdn/minimalist": "^2.0.2",
+    "@open-wc/webpack-import-meta-loader": "0.4.7",
     "@playwright/test": "1.14.0",
     "@storybook/addon-a11y": "^6.3.4",
     "@storybook/addon-essentials": "^6.3.4",
@@ -150,7 +151,7 @@
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "jest-junit-reporter": "^1.1.0",
     "jsdom": "^17.0.0",
-    "node-dev": "7.0.0",
+    "nodemon": "2.0.12",
     "pegjs": "^0.10.0",
     "prettier": "2.3.2",
     "prettier-plugin-packagejson": "^2.2.11",
