--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -126,6 +126,7 @@ jobs:
           # This removes the ability to sign in
           REACT_APP_DISABLE_AUTH: true
 
+        shell: bash
         run: |
           # Info about which CONTENT_* environment variables were set and to what.
           echo "CONTENT_ROOT=$CONTENT_ROOT"
@@ -143,8 +144,15 @@ jobs:
           # get in the default GitHub hosting Linux runners.
           # See https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners#supported-runners-and-hardware-resources
           yarn build --locale     en-us --locale     ja --locale     fr &
+          build1 = $!
           yarn build --not-locale en-us --not-locale ja --not-locale fr &
-          wait
+          build2 = $!
+
+          # You must explicitly specify the job you're waiting-on to ensure
+          # that the exit status of the wait command reflects the exit status
+          # of the job it's waiting-on.
+          wait $build1
+          wait $build2
 
           # TODO: When the deployer is available this is where we
           # would upload the whole content of client/build
