--- a/.github/workflows/prod-build.yml
+++ b/.github/workflows/prod-build.yml
@@ -171,12 +171,19 @@ jobs:
 
           yarn tool sync-translated-content
 
-          # Spread the work across 2 processes. Why 2? Because that's what you
-          # get in the default GitHub hosting Linux runners.
+          # Spread the work across 2 processes. Why 2? Because that's
+          # what you get in the default GitHub-hosted Linux runners.
           # See https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners#supported-runners-and-hardware-resources
           yarn build --locale     en-us --locale     ja --locale     fr &
+          build1=$!
           yarn build --not-locale en-us --not-locale ja --not-locale fr &
-          wait
+          build2=$!
+
+          # You must explicitly specify the job you're waiting-on to ensure
+          # that the exit status of the wait command reflects the exit status
+          # of the job it's waiting-on.
+          wait $build1
+          wait $build2
 
           du -sh client/build
 
