enable auth on stage

--- a/.github/workflows/stage-build.yml
+++ b/.github/workflows/stage-build.yml
@@ -151,7 +151,7 @@ jobs:
           REACT_APP_ENABLE_PLUS: true
 
           # This removes the ability to sign in
-          REACT_APP_DISABLE_AUTH: true
+          REACT_APP_DISABLE_AUTH: false
 
         run: |
 
