enable auth on stage

--- a/.github/workflows/stage-build.yml
+++ b/.github/workflows/stage-build.yml
@@ -150,8 +150,8 @@ jobs:
           # This enables the Plus call-to-action banner and the Plus landing page
           REACT_APP_ENABLE_PLUS: true
 
-          # This removes the ability to sign in
-          REACT_APP_DISABLE_AUTH: true
+          # This adds the ability to sign in (stage only for now)
+          REACT_APP_DISABLE_AUTH: false
 
         run: |
 
