--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "mdast-util-from-markdown": "^0.8.5",
     "mdast-util-phrasing": "^2.0.0",
     "mdn-data": "2.0.21",
+    "node-gettext": "^3.0.0",
     "open": "^8.2.1",
     "open-editor": "3.0.0",
     "prismjs": "1.24.1",
