chore: integrate style dictionary
Integrate style dictionary to allow building of design tokens from Figma JSON exports.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare-build": "yarn build:client && yarn build:ssr && yarn tool optimize-client-build && yarn tool google-analytics-code && yarn tool spas && yarn tool gather-git-history && yarn tool build-robots-txt && yarn tool popularities",
     "prettier-check": "prettier --check .",
     "prettier-format": "prettier --write .",
+    "style-dictionary": "style-dictionary build -c sd-config.js",
     "start": "(test -f client/build/index.html || yarn build:client) && (test -f ssr/dist/main.js || yarn build:ssr) && (test -d client/build/en-us/_spas || yarn tool spas) && nf -j Procfile.start start",
     "start:client": "cd client && cross-env BROWSER=none PORT=3000 craco start",
     "start:dev-server": "node-dev server",
@@ -169,6 +170,7 @@
     "remark-prettier": "^1.2.0",
     "rough-notation": "0.5.1",
     "sass": "^1.38.2",
+    "style-dictionary": "^3.0.2",
     "stylelint": "^13.13.1",
     "stylelint-a11y": "^1.2.3",
     "stylelint-config-prettier": "^8.0.2",
