--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -69,6 +69,15 @@ jobs:
           yarn test:testing
           yarn test:headless
 
+      - name: Basic m2h/h2m tool testing
+        env:
+          ENV_FILE: testing/.env
+        run: |
+          yarn md m2h markdown/tool/m2h --locale en-US
+          diff testing/content/files/en-us/markdown/tool/m2h/index.html testing/content/files/en-us/markdown/tool/m2h/expected.html
+          yarn md h2m markdown/tool/h2m --locale en-US
+          diff testing/content/files/en-us/markdown/tool/h2m/index.md testing/content/files/en-us/markdown/tool/h2m/expected.md
+
       - name: Debug server's stdout and stderr if tests failed
         if: failure()
         run: |
