--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@caporal/core": "2.0.2",
     "@fast-csv/parse": "4.3.6",
     "@mdn/browser-compat-data": "4.0.2",
+    "@webref/css": "^2.0.10",
     "accept-language-parser": "1.5.0",
     "browser-specs": "^2.9.0",
     "chalk": "4.1.2",
@@ -58,6 +59,7 @@
     "compression": "1.7.4",
     "cookie": "0.4.1",
     "cookie-parser": "1.4.5",
+    "css-tree": "^1.1.3",
     "cssesc": "^3.0.0",
     "dayjs": "1.10.6",
     "dotenv": "10.0.0",
