--- a/ssr/tsconfig.json
+++ b/ssr/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "extends": "../tsconfig.json",
+  "module": "esnext",
+  "target": "esnext",
   "compilerOptions": {
     "sourceMap": true
   }
