new settings for stage

--- a/.github/workflows/stage-build.yml
+++ b/.github/workflows/stage-build.yml
@@ -153,6 +153,12 @@ jobs:
           # This adds the ability to sign in (stage only for now)
           REACT_APP_DISABLE_AUTH: false
 
+          # Firefox Accounts and SubPlat settings
+          REACT_APP_FXA_SIGNIN_URL: /users/fxa/login/authenticate/
+          REACT_APP_FXA_SETTINGS_URL: https://accounts.stage.mozaws.net/settings/
+          REACT_APP_MDN_PLUS_SUBSCRIBE_URL: https://accounts.stage.mozaws.net/subscriptions/products/prod_Jtbg9tyGyLRuB0
+          REACT_APP_MDN_PLUS_MONTHLY_PLAN: price_1JFoTYKb9q6OnNsLalexa03p
+
         run: |
 
           # Info about which CONTENT_* environment variables were set and to what.
