removing jest-env-16 module dependency, see https://www.npmjs.com/package/jest-environment-jsdom-sixteen

--- a/.prettierignore
+++ b/.prettierignore
@@ -23,3 +23,6 @@ _githistory.json
 /testing/content/
 /kumascript/coverage/
 /ssr/mozilla.dnthelper.min.js
+client/src/.linaria_cache
+ssr/.linaria-cache
+popularities.json
