chore: configure storybook for linaria
Configure Storybook to work with Linaria.
Add basis for the new `notecards` using Linaria.
Add base `AuthDisabled` story

--- a/.gitignore
+++ b/.gitignore
@@ -77,5 +77,5 @@ client/.eslintcache
 popularities.json
 
 #linariacache
-client/src/.linaria_cache
+client/src/**/.linaria_cache
 ssr/.linaria-cache
