--- a/.prettierignore
+++ b/.prettierignore
@@ -23,6 +23,6 @@ _githistory.json
 /testing/content/
 /kumascript/coverage/
 /ssr/mozilla.dnthelper.min.js
-client/src/.linaria_cache
+client/src/**/.linaria_cache
 ssr/.linaria-cache
 popularities.json
